# tool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.tool/: autonomous-log.md
002_dictionary/: dictionary.hpp
004_expertise/: expertise.hpp
005_context/: context.cpp  context.hpp
007_knowledge/: downloader.cpp  downloader.hpp  wikipedia.hpp
008_entities/: entities.cpp
009_tools/: classify.hpp  correction.cpp  correction.hpp  statement.cpp
010_interface/: app.css  app.js  index.html  server.cpp  server.hpp  sessions_store.hpp  status.cpp
011_scripting/: scripting.cpp
012_task_scheduler/: scheduler.hpp
014_format_translators/: translators.hpp
015_doc_reader/: doc_reader.hpp
017_council/: council.hpp
018_artifact_safety/: safety_folder.cpp
019_artifact_legal/: legal_folder.cpp
021_artifact_decisions/: decisions_folder.hpp
022_project_memory/: project_memory.hpp
023_personal_memory/: personal_memory.cpp  personal_memory.hpp
024_memory_composer/: composer.cpp
025_forget_redact/: forget_redact.hpp
026_merge_dedup/: merge_dedup.cpp  merge_dedup.hpp
029_salience/: salience.cpp
030_provenance/: provenance.cpp
031_scope_guard/: scope_guard.cpp
032_recall_probe/: recall_probe.hpp
034_knowledge_graph/: knowledge_graph.cpp  knowledge_graph.hpp
036_memory_reconcile/: memory_reconcile.cpp  memory_reconcile.hpp
037_recap_distiller/: recap_distiller.cpp  recap_distiller.hpp
038_memory_browser/: memory_browser.cpp
039_inline_editor/: inline_editor.hpp
040_robots_sitemap/: robots_sitemap.hpp
041_feed_reader/: feed_reader.cpp
043_structured_data/: structured_data.hpp
044_dedup_ingest/: dedup_ingest.hpp
045_change_watcher/: change_watcher.cpp
047_crawl_politeness/: crawl_politeness.cpp
049_page_triage/: page_triage.cpp  page_triage.hpp
052_wayback/: wayback.cpp  wayback.hpp
053_export_replay/: export_replay.cpp  export_replay.hpp
056_ref_formats/: ref_formats.hpp
057_attachment_deduper/: attachment_deduper.cpp  attachment_deduper.hpp
059_reading_queue/: reading_queue.cpp
060_footnote_manager/: footnote_manager.cpp
064_regex_designer/: regex_designer.cpp  regex_designer.hpp
066_stack_trace/: stack_trace.cpp
067_changelog/: changelog.cpp
068_diff_viewer/: diff_viewer.cpp
070_sbom_auditor/: sbom_auditor.cpp
071_log_viewer/: log_viewer.cpp  log_viewer.hpp
072_linter_hub/: linter_hub.hpp
074_history_explorer/: history_explorer.hpp
075_embedded_browser_tool/: embedded_browser_tool.cpp  embedded_browser_tool.hpp
076_standing_principle_small_specialist_integration/: standing_principle_small_specialist_integration.hpp
077_headless_browser_fetcher/: headless_browser_fetcher.cpp
079_pdf_ingestor/: pdf_ingestor.cpp  pdf_ingestor.hpp
081_citation_graph_explorer/: citation_graph_explorer.cpp
082_literature_review_synthesizer/: literature_review_synthesizer.cpp
083_style_editor/: style_editor.cpp
084_retraction_and_errata_watcher/: retraction_and_errata_watcher.cpp
086_open_access_resolver/: open_access_resolver.cpp  open_access_resolver.hpp
087_code_editor/: code_editor.cpp  code_editor.hpp
089_build_runner/: build_runner.cpp
090_test_runner/: test_runner.cpp
091_debugger/: debugger.cpp
094_dependency_manager/: dependency_manager.cpp  dependency_manager.hpp
095_vulnerability_scanner/: vulnerability_scanner.hpp
1001_tribology_and_wear_estimator/: tribology_and_wear_estimator.cpp  tribology_and_wear_estimator.hpp
1003_fracture_toughness_and_crack_calculator/: fracture_toughness_and_crack_calculator.cpp  fracture_toughness_and_crack_calculator.hpp
1007_tempering_color_and_spark_test_guide/: tempering_color_and_spark_test_guide.hpp
1009_noise_level_predictor/: noise_level_predictor.cpp  noise_level_predictor.hpp
100_benchmark_harness/: benchmark_harness.hpp
1011_sound_transmission_loss_calculator/: sound_transmission_loss_calculator.cpp
1012_anechoic_chamber_sizer/: anechoic_chamber_sizer.hpp
1013_absorber_and_diffuser_designer/: absorber_and_diffuser_designer.hpp
1014_octave_band_spectrum_tool/: octave_band_spectrum_tool.cpp
1015_heat_exchanger_sizer/: heat_exchanger_sizer.hpp
1016_thermal_network_solver/: thermal_network_solver.hpp
1017_psychrometric_calculator/: psychrometric_calculator.hpp
1018_insulation_thickness_optimizer/: insulation_thickness_optimizer.hpp
1019_pipe_network_solver/: pipe_network_solver.hpp
1020_pressure_drop_and_moody_tool/: pressure_drop_and_moody_tool.cpp  pressure_drop_and_moody_tool.hpp
1021_pump_and_fan_curve_fitter/: pump_and_fan_curve_fitter.cpp  pump_and_fan_curve_fitter.hpp
1022_npsh_and_cavitation_checker/: npsh_and_cavitation_checker.cpp
1023_valve_cv_and_kv_sizer/: valve_cv_and_kv_sizer.cpp
1026_hydraulic_circuit_designer/: hydraulic_circuit_designer.cpp
1027_compressed_air_system_designer/: compressed_air_system_designer.cpp
1029_view_factor_calculator/: view_factor_calculator.hpp
1030_fan_and_duct_noise_predictor/: fan_and_duct_noise_predictor.cpp
1031_beam_designer/: beam_designer.hpp
1032_column_calculator/: column_calculator.hpp
1033_truss_solver/: truss_solver.hpp
1034_frame_analyzer/: frame_analyzer.cpp
1038_seismic_load_calculator/: seismic_load_calculator.cpp  seismic_load_calculator.hpp
1039_wind_load_calculator/: wind_load_calculator.hpp
103_code_to_code_translator/: code_to_code_translator.cpp
1041_duct_sizer/: duct_sizer.cpp  duct_sizer.hpp
1042_pipe_sizer/: pipe_sizer.hpp
1043_psychrometric_chart/: psychrometric_chart.cpp
1044_refrigeration_cycle_modeler/: refrigeration_cycle_modeler.cpp  refrigeration_cycle_modeler.hpp
1045_building_energy_model/: building_energy_model.cpp
1047_code_checker/: code_checker.hpp
1048_egress_occupancy_planner/: egress_occupancy_planner.hpp
1049_site_plan_tool/: site_plan_tool.cpp
104_code_review_companion/: code_review_companion.hpp
1051_earthwork_calculator/: earthwork_calculator.cpp  earthwork_calculator.hpp
1052_concrete_mix_designer/: concrete_mix_designer.hpp
1053_rebar_detailer/: rebar_detailer.hpp
(+6593 files in other folders)
